examples/test/testpolicy5915.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5915
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key22: value49
      key23: value12
      key11: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value28
      podSelector:
        matchLabels:
          key30: value19
